added the new illustry design + modify the delete api for illustration + update swagger + update smoke
